# developer-bootcamp-2024

./: .gitignore  README.md  package.json
project-1-favorites/: README.md
project-10-lending/: Anchor.toml  README.md  package.json
project-10-lending/lending/: Cargo.toml  tsconfig.base.json
project-10-lending/lending/anchor/programs/lending/src/: constants.rs
project-10-lending/lending/anchor/programs/lending/src/state/: obligation.rs
project-10-lending/lending/anchor/src/: index.ts
project-10-lending/lending/src/: constants.rs  error.rs  lib.rs  mod.rs  state.rs
project-10-lending/lending/src/instructions/: admin.rs  borrow.rs  deposit.rs  liquidate.rs  mod.rs  repay.rs  withdraw.rs
project-10-lending/lending/web/app/: layout.tsx
project-10-lending/lending/web/components/basic/: basic-data-access.tsx
project-10-lending/lending/web/components/ui/: ui-layout.tsx
project-11-programmable-money/: README.md
project-11-programmable-money/program/programs/stablecoin/: Cargo.toml
project-11-programmable-money/program/programs/stablecoin/src/: constants.rs  error.rs  lib.rs  state.rs
project-11-programmable-money/program/programs/stablecoin/src/instructions/: mod.rs  utils.rs
project-11-programmable-money/program/programs/stablecoin/src/instructions/admin/: initialize_config.rs  mod.rs  update_config.rs
project-11-programmable-money/program/programs/stablecoin/src/instructions/deposit/: deposit_collateral_and_mint_tokens.rs  mod.rs  utils.rs
project-11-programmable-money/program/programs/stablecoin/src/instructions/withdraw/: liquidate.rs  redeem_collateral_and_burn_tokens.rs  utils.rs
project-12-attack-the-bank/: README.md
project-12-attack-the-bank/bank_two/programs/bank_two/: Cargo.toml
project-12-attack-the-bank/bank_two/programs/bank_two/src/: lib.rs
project-13-getting-to-production/: LICENSE  README.md  nx.json  package.json  tsconfig.base.json
project-2-voting/: README.md  package.json  tsconfig.base.json
project-3-blinks/: README.md
project-8-token-vesting/anchor/programs/vesting/: Cargo.toml
project-8-token-vesting/anchor/programs/vesting/src/: lib.rs
(+191 files in other folders)
